--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,54 @@
-version: '3.1'
+version: '3.3'
 
 services:
-  php:
-    container_name: nethernite_php
-    build:
-      context: ./php/
-      dockerfile: Dockerfile
-    volumes:
-      - .:/var/www/example
-      - ./php/php.ini:/usr/local/etc/php/conf.d/40-custom.ini:ro
   nginx:
-    container_name: nethernite_nginx
-    image: nginx:1.19
-    links:
-      - php
-    ports:
-      - 8000:80
+    image: nginx:latest
+    container_name: nginx
     volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - .:/var/www/example
-  mysql:
-    container_name: nethernite_mysql
-    build:
-      context: ./mysql/
-      dockerfile: Dockerfile
+      - ./:/var/www
+#      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 3306:3306
+      - 80:80
+    links:
+      - php-fpm
+
+  mysql:
+    image: mysql:5.7
+    container_name: db
+    command: mysqld --sql_mode=""
+    volumes:
+      - ./docker/mysql/data:/var/lib/mysql
+      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/custom.cnf
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=test_task
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+    ports:
+      - 3308:3306
+
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - 6379:6379
+
+  php-fpm:
+    image: westside072/php-fpm:7.4.12
     volumes:
-      - ./mysql/init:/docker-entrypoint-initdb.d
-      - ./mysql/config:/etc/mysql/conf.d
-      - ./mysql:/etc/mysql/volume:ro
+      - ./:/var/www/
+      - ~/.ssh/id_rsa:/root/.ssh/id_rsa
+    working_dir: /var/www/
+    restart: always
+    ports:
+      - 8000:8000
+    depends_on:
+      - mysql
+      - redis
+
+  adminer:
+    image: adminer:latest
+    ports:
+      - 8080:8080
+    depends_on:
+      - mysql
